// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderChunksToLineGroups > collapsed > matches the snapshot 1`] = `
{
  "lineGroups": [
    [
      {
        "lineNumber": 1,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
        ],
        "matchCount": 1,
      },
      {
        "lineNumber": 2,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
        ],
        "matchCount": 1,
      },
    ],
    [
      {
        "lineNumber": 6,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
          {
            "kind": "context",
            "startByteOffset": 2,
            "text": "2",
          },
          {
            "kind": "match",
            "startByteOffset": 3,
            "text": "3",
          },
          {
            "kind": "context",
            "startByteOffset": 4,
            "text": "4",
          },
          {
            "kind": "match",
            "startByteOffset": 5,
            "text": "5",
          },
          {
            "kind": "context",
            "startByteOffset": 6,
            "text": "6",
          },
          {
            "kind": "match",
            "startByteOffset": 7,
            "text": "7",
          },
          {
            "kind": "context",
            "startByteOffset": 8,
            "text": "8",
          },
          {
            "kind": "match",
            "startByteOffset": 9,
            "text": "9",
          },
        ],
        "matchCount": 5,
      },
    ],
  ],
  "preCutoffMatchCount": 7,
}
`;

exports[`renderChunksToLineGroups > expanded > matches the snapshot 1`] = `
{
  "lineGroups": [
    [
      {
        "lineNumber": 1,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
        ],
        "matchCount": 1,
      },
      {
        "lineNumber": 2,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
        ],
        "matchCount": 1,
      },
    ],
    [
      {
        "lineNumber": 6,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
          {
            "kind": "context",
            "startByteOffset": 2,
            "text": "2",
          },
          {
            "kind": "match",
            "startByteOffset": 3,
            "text": "3",
          },
          {
            "kind": "context",
            "startByteOffset": 4,
            "text": "4",
          },
          {
            "kind": "match",
            "startByteOffset": 5,
            "text": "5",
          },
          {
            "kind": "context",
            "startByteOffset": 6,
            "text": "6",
          },
          {
            "kind": "match",
            "startByteOffset": 7,
            "text": "7",
          },
          {
            "kind": "context",
            "startByteOffset": 8,
            "text": "8",
          },
          {
            "kind": "match",
            "startByteOffset": 9,
            "text": "9",
          },
        ],
        "matchCount": 5,
      },
      {
        "lineNumber": 7,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
          {
            "kind": "context",
            "startByteOffset": 2,
            "text": "2",
          },
          {
            "kind": "match",
            "startByteOffset": 3,
            "text": "3",
          },
        ],
        "matchCount": 2,
      },
      {
        "lineNumber": 8,
        "lineTokens": [
          {
            "kind": "context",
            "startByteOffset": 0,
            "text": "0",
          },
          {
            "kind": "match",
            "startByteOffset": 1,
            "text": "1",
          },
        ],
        "matchCount": 1,
      },
    ],
  ],
  "preCutoffMatchCount": 7,
}
`;
